--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -123,7 +123,7 @@
 
   <div class="main">
     <div class="section">
-      <img src="image-qr-code.png" alt="a image-qr-code" height="300px" width="300px">
+      <img src="/images/image-qr-code.png" alt="a image-qr-code" height="300px" width="300px">
       <div class="center"><h3> Improve your front-end skills by building projects</h3>
       <span class="light"><p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></span></div>
     </div>
