--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       display:flex;
       flex-direction: column;
       text-align: center;
-      padding: 14px 0;
+      padding: 14px;
     }
     
     img{
@@ -58,12 +58,10 @@
       /* text-align:start; */
       width: 100%;
       height:100%;
-      margin: auto;
-      padding:0 14px 0 14px; 
-      
+      margin: auto;  
    }
 
-    h3{
+    h1{
       margin-top: 20px;
       font-size: 1.36rem;
       text-align: center;
@@ -75,12 +73,12 @@
 </head>
 <body>
 
-  <main>
+  <main
     <section>
       <img src="images/image-qr-code.png" alt="a image-qr-code">
     </section>
     <section>
-      <h3> Improve your front-end skills by building projects</h3>
+      <h1> Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </section>
   </main>
