--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
       font-size: 15px;
       color: hsl(220, 13%, 46%);
       font-weight: 400;
-      padding: 0 18px;
+      padding: 0 17px;
       padding-bottom:10px;
     }
     
 
-   section {
-      /* text-align:start; */
+    section {
+      justify-content: center;
+      text-align:center;
       width: 100%;
       height:100%;
       margin: auto;  
-   }
+    }
 
     h1{
       margin-top: 20px;
@@ -72,7 +73,7 @@
 </head>
 <body>
 
-  <main
+  <main>
     <section>
       <img src="images/image-qr-code.png" alt="a image-qr-code">
     </section>
