--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 
     body{
       background-color:  hsl(212, 33%, 92%);
-      margin: 70px auto;
+      margin: auto;
       
     }
     main{
-      border:2px solid white;
+      border:2px solid rgb(249, 247, 247);
       width: 320px;
+      height: fit-content;
       background-color: white;
       border-radius: 20px;
       margin: auto;
-      box-shadow: 0 8px 20px 4px hsl(219, 15%, 71%);
+      box-shadow: 0 8px 20px 4px hsl(217, 12%, 87%);
       display:flex;
       flex-direction: column;
       text-align: center;
@@ -48,7 +49,7 @@
       font-size: 15px;
       color: hsl(220, 13%, 46%);
       font-weight: 400;
-      padding: 0 17px;
+      padding: 0 15px;
       padding-bottom:10px;
     }
     
@@ -66,7 +67,7 @@
       font-size: 1.36rem;
       text-align: center;
       font-weight: 700;
-      padding: 0 18px;
+      padding: 0 15px;
     }
   
   </style>
